# gid-mapper

./: .gitignore  CMakeLists.txt  main.cpp
source/: main.cpp
source/mapper/: mapper.cxx  mapper.hxx
source/xml/: tinyxml2.cxx  tinyxml2.hxx
tests/final/: sample_1.tmx  sample_2.tmx  sample_3.tmx  sample_4.tmx  sample_5.tmx  sample_6.tmx
tests/maps/: sample_1.tmx  sample_2.tmx  sample_3.tmx  sample_4.tmx  sample_5.tmx  sample_6.tmx
